--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fabric-deployment-tool"
-version = "0.1.0"
+version = "0.1.3"
 description = "Project for building distributable Fabric deployment tooling wheels."
 readme = "README.md"
-authors = [{ name = "Your Name", email = "you@example.com" }]
+authors = [{ name = "Edgar Cotte", email = "e@e.com" }]
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
 keywords = ["fabric", "deployment", "template", "wheel"]
